--- a/css/style.css
+++ b/css/style.css
@@ -797,6 +797,7 @@ img{
 	width: 100%;
 	border-top:1px solid #232323;
 	border-bottom:1px solid #232323;
+	background-image: url(/images/background/3.jpg); /* */
 }
 
 .main-menu{
