--- a/css/fontawesome-all.css
+++ b/css/fontawesome-all.css
@@ -3669,6 +3669,9 @@ readers do not read off random characters that represent icons */
 .fa-ticket-alt:before {
   content: "\f3ff"; }
 
+.fa-tiktok:before {
+  content: "\f97b"; }
+
 .fa-times:before {
   content: "\f00d"; }
 
