--- a/css/style.css
+++ b/css/style.css
@@ -1731,7 +1731,7 @@ img{
 	position: relative;
 	display: block;
 	font-size: 20px;
-	color: #3786ff;
+	color: #737373;
 	font-weight: 400;
 	margin-bottom: 10px;
 	letter-spacing:1px;
@@ -3585,7 +3585,7 @@ img{
 	text-align:center;
 	z-index:100;
 	cursor:pointer;
-	background:#3786ff;
+	background:#737373;
 	border-radius: 0px;
 	margin-left:-26px;
 	display:inline-block;
@@ -3645,11 +3645,17 @@ img{
 	position:relative;
 }
 
-.games-block .inner-box .image img{
-	position:relative;
+/* additional code from FR */
+/* .games-block .inner-box .image img:nth-of-type(1){
+	position:absolute;
 	width:100%;
 	display:block;
 }
+
+.games-block .inner-box .image:hover img:nth-of-type(1){
+	opacity: 0;
+} */
+/* additional code from FR */
 
 .games-block .inner-box .lower-content{
 	position:relative;
@@ -3761,7 +3767,7 @@ img{
 
 .players-section{
 	position:relative;
-	padding-bottom:90px;
+	padding:110px 0px 110px;
 }
 
 .players-section.style-two{
@@ -3936,7 +3942,7 @@ img{
     -webkit-transition: all 900ms ease;
     -ms-transition: all 900ms ease;
     -o-transition: all 900ms ease;
-	background-color:#3786ff;
+	background-color:#737373;
 }
 
 .call-to-action-section .content .play-box .ripple,
