--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
 a{
 	text-decoration:none;
 	cursor:pointer;
-	color:#3786ff;
+	color:#4A4A4A;
 }
 
 a:hover,
@@ -207,7 +207,7 @@ figure{
 	display:block;
 	z-index:1;
 	padding: 18px 56px;
-	background-color: #1B1811;
+	background-color: #000000;
 	transition:all 0.3s ease;
 	-moz-transition:all 0.3s ease;
 	-webkit-transition:all 0.3s ease;
@@ -861,7 +861,7 @@ img{
 	width:0px;
 	z-index:-1;
 	margin-top:-2px;
-	background-color:#3786ff;
+	background-color:#4A4A4A;
 	-webkit-transition:all 300ms ease;
 	-moz-transition:all 300ms ease;
 	-ms-transition:all 300ms ease;
@@ -894,7 +894,7 @@ img{
     visibility: hidden;
 	padding: 0px 0px;
 	background-color: #ffffff;
-	border-top: 2px solid #3786ff;
+	border-top: 2px solid #303030;
 	-moz-transform: translateY(30px);
 	-webkit-transform: translateY(30px);
 	-ms-transform: translateY(30px);
@@ -930,7 +930,7 @@ img{
 	width:0%;
 	height:100%;
 	display:block;
-	background:#3786ff;
+	background:#303030;
 	transition:all 500ms ease;
 	-moz-transition:all 500ms ease;
 	-webkit-transition:all 500ms ease;
@@ -1198,7 +1198,7 @@ img{
 	-webkit-transform: none !important;
 	-ms-transform: none !important;
 	transform: none !important;
-	border-top:3px solid #3786ff;
+	border-top:3px solid #4A4A4A;
 }
 
 .main-header .search-panel .form-container{
@@ -1644,7 +1644,7 @@ img{
 
 .mobile-menu .navigation li.current > a,
 .mobile-menu .navigation li > a:hover{
-	color:#3786ff;	
+	color:#737373;	
 }
 
 .mobile-menu .navigation li.current > a:before{
@@ -1673,7 +1673,7 @@ img{
 }
 
 .mobile-menu .navigation li.dropdown .dropdown-btn.open{
-	background:#3786ff;	
+	background:#737373;	
 	-webkit-transform:rotate(90deg);
 	-ms-transform:rotate(90deg);
 	transform:rotate(90deg);	
@@ -3751,6 +3751,21 @@ img{
 	max-width:inherit;
 }
 
+
+.welcome-section-two .btn-style-one .btn-title{
+	position: relative;
+	display:block;
+	z-index:1;
+	padding: 18px 56px;
+	background-color: #000000;
+	border: 1px solid #ffffff;
+	/* border-radius: 2px; */
+	transition:all 0.3s ease;
+	-moz-transition:all 0.3s ease;
+	-webkit-transition:all 0.3s ease;
+	-ms-transition:all 0.3s ease;
+	-o-transition:all 0.3s ease;
+}
 /*** 
 
 ====================================================================
