--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
 a{
 	text-decoration:none;
 	cursor:pointer;
-	color:#4A4A4A;
+	color:#ffffff;
 }
 
 a:hover,
@@ -2838,9 +2838,9 @@ img{
 
 .gallery-item .overlay-inner .link{
 	position:relative;
-	width:50px;
+	width:30%;
 	height:50px;
-	margin:0px 5px;
+	margin:0 5px;
 	font-weight:400;
 	text-align:center;
 	display:inline-block;
@@ -2850,14 +2850,14 @@ img{
 .gallery-item .overlay-inner .link .icon{
 	position:relative;
 	display: block;
-	width:50px;
+	width:100%;
 	height:50px;
 	font-size:18px;
-	color:#ffffff;
+	color:#000000;
 	line-height:50px;
 	font-weight:400;
 	text-align:center;
-	background-color:#3786ff;
+	background-color:#ffffff;
 	transition:all 300ms ease;
 	-webkit-transition:all 300ms ease;
 	-ms-transition:all 300ms ease;
@@ -2866,11 +2866,11 @@ img{
 }
 
 .gallery-item .inner-box .overlay-inner .link:nth-child(1){
-	top: -40px;
+	top: 40px;
 }
 
 .gallery-item .inner-box .overlay-inner .link:nth-child(2){
-	top: 40px;
+	top: -40px;
 }
 
 .gallery-item .inner-box:hover .overlay-inner .link{
@@ -2893,10 +2893,21 @@ img{
 }
 
 .gallery-item .overlay-inner .link:hover .icon{
-	color:#3786ff;
-	background-color:#ffffff;
+	color:#ffffff;
+	background-color:#303030;
 }
 
+.h3-division-title{
+	margin-bottom: 0.3em;
+}
+
+.division-title-link{
+	color:white;
+}
+
+.division-title-link:hover{
+	color: #737373;
+}
 /*** 
 
 ====================================================================
