--- a/css/style.css
+++ b/css/style.css
@@ -1738,7 +1738,7 @@ img{
 	text-transform: uppercase;
 }
 
-.sec-title h2{
+.sec-title-two h2{
 	position: relative;
 	display: block;
 	font-size:60px;
@@ -1749,6 +1749,45 @@ img{
 }
 
 .sec-title.light h2{
+	color: #ffffff;
+}
+
+/*** 
+
+====================================================================
+		Section Title Two
+====================================================================
+
+***/
+
+.sec-title-two{
+	position:relative;
+	z-index: 1;
+	margin-bottom:60px;
+}
+
+.sec-title-two .title{
+	position: relative;
+	display: block;
+	font-size: 20px;
+	color: #737373;
+	font-weight: 400;
+	margin-bottom: 10px;
+	letter-spacing:1px;
+	text-transform: uppercase;
+}
+
+.sec-title-two h2{
+	position: relative;
+	display: block;
+	font-size:30px;
+	line-height: 1.1em;
+	color: #ffffff;
+	font-weight: 700;
+	text-transform:uppercase;
+}
+
+.sec-title-two.light h2{
 	color: #ffffff;
 }
 
@@ -3792,7 +3831,7 @@ img{
 
 .players-section-two{
 	position:relative;
-	padding:110px 0px 110px;
+	padding:110px 0px 30px;
 	background: url(../images/background/about-management-bg.png);
 	background-size: auto;
 	background-position: center top;
@@ -3840,7 +3879,7 @@ img{
 .player-block .inner-box .lower-content{
 	position:relative;
 	margin-top:10px;
-	padding:30px 50px 45px;
+	padding:30px 10% 45px;
 	background-color:#000000;
 	-webkit-transition: all 300ms ease;
 	-moz-transition: all 300ms ease;
@@ -3884,7 +3923,7 @@ img{
 .player-block .inner-box .lower-content .social-icons{
 	position:relative;
 	padding-top:30px;
-	margin-top:30px;
+	margin-top:20px;
 	border-top:1px solid #302f2f;
 }
 
@@ -4260,7 +4299,7 @@ img{
 }
 
 .page-banner .bread-crumb li a:hover{
-	color:#3786ff;	
+	color:#1B1811;	
 }
 
 /*** 
