--- a/css/style.css
+++ b/css/style.css
@@ -1738,7 +1738,7 @@ img{
 	text-transform: uppercase;
 }
 
-.sec-title-two h2{
+.sec-title h2{
 	position: relative;
 	display: block;
 	font-size:60px;
@@ -3908,7 +3908,7 @@ img{
 }
 
 .player-block .inner-box .lower-content h3 a:hover{
-	color:#3786ff;
+	color:#1B1811;
 }
 
 .player-block .inner-box .lower-content .level{
