resize division thumbnail @ homepage & division page

--- a/css/style.css
+++ b/css/style.css
@@ -3734,6 +3734,11 @@ img{
 	color:#3786ff;
 }
 
+.col-aligncenter {
+	float: none;
+	margin: 0 auto;
+}
+
 /*** 
 
 ====================================================================
